--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-outside-click",
+  "name": "@whero/use-outside-click",
   "private": true,
   "version": "0.0.0",
   "type": "module",
