--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@whero/use-outside-click",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "files": [
     "dist"
   ],
   "main": "./dist/use-outside-click.cjs",
   "module": "./dist/use-outside-click.js",
+  "types": "./dist/@whero/use-outside-click.d.ts",
   "exports": {
     ".": {
       "require": "./dist/use-outside-click.cjs",
